# RP2350-ProtoGPU

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
build-headless/: hub75.pio.h  octal_spi_rx.pio.h  protogl_gpu.dis  protogl_gpu.elf.map
build-headless/pico-sdk/src/rp2350/boot_stage2/: bs2_default.dis  bs2_default.elf.map  bs2_default_padded.S
build-headless/pico-sdk/src/rp2350/boot_stage2/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build-headless/pico-sdk/src/rp2350/boot_stage2/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build-headless/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/src/pioasmBuild-stamp/: pioasmBuild-source_dirinfo.txt
build-headless/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
build-headless/pioasm/: install_manifest.txt
sim/: build_sim.sh  ppm_compare.py  ppm_to_png.py  run_f04_check.sh  run_golden.sh  sim_main.cpp  sim_qspi_vram_stub.cpp  test_f04_signature.cpp
sim/golden/: B2_2d_layers.ppm  B4_psb_postfx.ppm  B7_alpha3d.ppm  B8_bilinear.ppm  B9_multicam.ppm  cube.ppm
src/: command_parser.cpp  command_parser.h  gpu_clock.cpp  gpu_clock.h  gpu_config.h  gpu_core.cpp  gpu_core.cpp.bak2  gpu_core.h  main.cpp  main.cpp.bak2  scene_state.h
src/display/: display_driver.h  display_manager.cpp  display_manager.h  hub75.pio  hub75_display_driver.h  hub75_driver.cpp  hub75_driver.h  i2c_hud_driver.cpp  i2c_hud_driver.h
src/math/: pgl_math.cpp  pgl_math.h
src/memory/: flash_persist.cpp  flash_persist.h  mem_opi_psram.cpp  mem_opi_psram.h  mem_pool.h  mem_qspi_psram.cpp  mem_qspi_psram.h  mem_qspi_vram.cpp  mem_qspi_vram.h  mem_tier.cpp  mem_tier.h
src/profiling/: perf_counters.h
src/render/: pgl_shader_vm.cpp  pgl_shader_vm.h  quadtree.cpp  quadtree.h  rasterizer.cpp  rasterizer.h  rasterizer_2d.cpp  rasterizer_2d.h  screenspace_effects.cpp  screenspace_effects.h  triangle2d.cpp  triangle2d.h
src/scheduler/: pgl_job_scheduler_rp2350.cpp  pgl_job_scheduler_rp2350.h  pgl_tile_scheduler.cpp  pgl_tile_scheduler.h
src/selftest/: gpu_selftest.cpp  gpu_selftest.h  headless_selftest.cpp  headless_selftest.cpp.bak2  headless_selftest.h  headless_selftest.h.bak2  ssd1331_driver.cpp  ssd1331_driver.h  teapot_mesh.h
src/transport/: i2c_slave.cpp  i2c_slave.h  octal_spi_rx.cpp  octal_spi_rx.h  octal_spi_rx.pio
tests/syntax_check/: check_scene_state.cpp  run_scene_check.sh
